--- a/public/css/panel.css
+++ b/public/css/panel.css
@@ -1,21 +1,11 @@
-html {
-    width: 300px;
-    height: 500px;
-    padding: 0;
-    margin: 0;
-}
-
 body {
     padding: 0;
     margin: 0;
     color: #ccc;
-    width: 300px;
-    height: 500px;
 }
 
 .container {
-    /* border: 1px solid red; */
-    width: 300px;
+    width: 100%;
     height: 500px;
     background-color: #2e2525;
     font-size: 9pt;
@@ -23,7 +13,7 @@ body {
 }
 
 .image {
-    width: 300px;
+    width: 100%;
     max-height: 462px;
     overflow: hidden;
 }
