--- a/public/css/panel.css
+++ b/public/css/panel.css
@@ -20,8 +20,8 @@ body {
     overflow: hidden;
 }
 .image img {
-    width: 300px;
-    height: 100%;
+    width: 318px;
+    height: 500px;
 }
 
 hr {
