--- a/public/css/video.css
+++ b/public/css/video.css
@@ -13,11 +13,11 @@ body {
 }
 
 .content .offset {
-    display: none;
 }
 
 .content:hover .offset {
-    display: block;
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
 }
 
 .container {
@@ -27,6 +27,9 @@ body {
     font-size: 9pt;
     text-align: center;
     margin-left: 58px;
+    -webkit-box-shadow: 5px 2px 50px 2px rgba(0,0,0,0.68);
+    -moz-box-shadow: 5px 2px 50px 2px rgba(0,0,0,0.68);
+    box-shadow: 5px 2px 50px 2px rgba(0,0,0,0.68);
 }
 
 .image {
@@ -65,6 +68,10 @@ hr {
     height: 38px;
     background-image: url(../img/inactiveTitle.png);
     background-size: cover;
+
+    -webkit-box-shadow: 5px 2px 50px 2px rgba(0,0,0,0.68);
+    -moz-box-shadow: 5px 2px 50px 2px rgba(0,0,0,0.68);
+    box-shadow: 5px 2px 50px 2px rgba(0,0,0,0.68);
 }
 .dropdown:hover {
     background-color: #000;
@@ -96,6 +103,10 @@ hr {
     background-image: url(../img/grayx.png);
     background-size: cover;
     cursor: pointer;
+
+    -webkit-box-shadow: 5px 2px 50px 2px rgba(0,0,0,0.68);
+    -moz-box-shadow: 5px 2px 50px 2px rgba(0,0,0,0.68);
+    box-shadow: 5px 2px 50px 2px rgba(0,0,0,0.68);
 }
 
 .btn-close:hover {
@@ -108,11 +119,13 @@ hr {
 }
 
 .header .btn-close {
-    opacity: 0;
+    -webkit-animation-name: fadeOut;
+    animation-name: fadeOut;
 }
 
 .header:hover .btn-close {
-    opacity: 1;
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
 }
 
 .offset {
